# PilotLife

./: .gitignore  01-login.html  02-dashboard.html  03-account-settings.html  04-registration.html  BUILD.md  LICENSE.md  PilotLife.slnx  README.md  aircraft.csv  aircraft_solution.md  build_connector.bat  docker-compose.yml  economy.md  scrape_aircraft.js
PilotLife.API/: PilotLife.API.csproj  PilotLife.API.http  Program.cs  appsettings.Development.json  appsettings.json
PilotLife.API/Controllers/: AircraftController.cs  AircraftRequestsController.cs  AirportsController.cs  AuthController.cs  ConnectorController.cs  ExamsController.cs  HangarController.cs  JobsController.cs  LicensesController.cs  LoansController.cs  MaintenanceController.cs  MarketplaceController.cs  ReputationController.cs  SkillsController.cs  WorldsController.cs
PilotLife.API/DTOs/: MaintenanceDTOs.cs  MarketplaceDTOs.cs  ReputationDTOs.cs  SkillsDTOs.cs
PilotLife.API/Data/: PilotLifeDbContext.cs
PilotLife.API/Entities/: User.cs
PilotLife.API/Migrations/: 20251211172427_InitialCreate.Designer.cs  20251211172427_InitialCreate.cs  PilotLifeDbContextModelSnapshot.cs
PilotLife.API/Properties/: launchSettings.json
PilotLife.API/Services/: AirportImportService.cs  AuthorizationService.cs  CreditScoreService.cs  DatabaseSeeder.cs  FlightTrackingService.cs  JwtService.cs  LoanService.cs  MarketplaceGenerator.cs  MarketplacePopulationService.cs
PilotLife.Application/: Class1.cs  PilotLife.Application.csproj
PilotLife.Application/Authorization/: IAuthorizationService.cs
PilotLife.Application/Common/: ThreadSafeRandom.cs
PilotLife.Application/FlightTracking/: IFlightTrackingService.cs
PilotLife.Application/Jobs/: IJobGenerator.cs  JobGenerationConfiguration.cs
PilotLife.Application/Maintenance/: IMaintenanceService.cs  MaintenanceConfiguration.cs
PilotLife.Application/Marketplace/: IMarketplaceGenerator.cs  MarketplaceConfiguration.cs
PilotLife.Application/Reputation/: IReputationService.cs  ReputationConfiguration.cs
PilotLife.Application/Skills/: ISkillsService.cs  SkillsConfiguration.cs
PilotLife.Connector/: CMakeLists.txt  build.bat
PilotLife.Connector/src/: AircraftIndexer.cpp  AircraftIndexer.h  FlightData.cpp  FlightData.h  ProcessDetector.cpp  ProcessDetector.h  SimConnectManager.cpp  SimConnectManager.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
PilotLife.Database/: Class1.cs  PilotLife.Database.csproj
PilotLife.Database/Data/: PilotLifeDbContext.cs
PilotLife.Database/Entities/: Aircraft.cs  AircraftRequest.cs  Airport.cs  Job.cs  RefreshToken.cs  User.cs
PilotLife.Database/Migrations/: 20251211185200_InitialCreate.Designer.cs  20251211185200_InitialCreate.cs  20251212175915_AddAirportsAndJobs.Designer.cs  20251212175915_AddAirportsAndJobs.cs  20251212181616_AddRefreshTokens.Designer.cs  20251212181616_AddRefreshTokens.cs  20251214125542_Migration_1.Designer.cs  20251214125542_Migration_1.cs  20251214181216_Initial.Designer.cs  20251214181216_Initial.cs  20251214184024_AddAircraftOwnershipEntities.Designer.cs  20251214184024_AddAircraftOwnershipEntities.cs  20251214185416_AddAircraftMarketplace.Designer.cs  20251214185416_AddAircraftMarketplace.cs  20251214190455_AddCargoAndJobEnhancements.Designer.cs  20251214190455_AddCargoAndJobEnhancements.cs  20251215135858_Job & Dealer Generation Workers.Designer.cs  20251215135858_Job & Dealer Generation Workers.cs  20251215141802_Job Generation Changes.Designer.cs  20251215141802_Job Generation Changes.cs  20251215155005_AddLicenseSystem.Designer.cs  20251215155005_AddLicenseSystem.cs  20251215160346_AddReputationAndSkills.Designer.cs  20251215160346_AddReputationAndSkills.cs  20251215162700_Skills, License, Banking, Reputation.Designer.cs  20251215162700_Skills, License, Banking, Reputation.cs  20251215193131_AddAircraftFileData.Designer.cs  (+2 more)
PilotLife.Domain/: Class1.cs
PilotLife.IntegrationTests/: PilotLife.IntegrationTests.csproj  UnitTest1.cs
PilotLife.UnitTests/: PilotLife.UnitTests.csproj  UnitTest1.cs
docs/: developer_docs.md  economy.md  tool_planning.md
pilotlife-app/: index.html  package-lock.json  package.json
(+170 files in other folders)
